k8s/manifests/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-svc
spec:
  selector:
    app: go-webapp
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
