k8s/manifests/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-webapp
  annotations:
  nginx.ingress.kubernetes.io/rewrite_target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "go-webapp.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-webapp
            port:
              number: 80
